Web3D together for bib, remove addres from AnySL bib (no space).
git-svn-id: https://svn.code.sf.net/p/castle-engine/code/trunk/papers@8862 afe8dcc5-9094-451b-8773-5f495042a737

--- a/compositing_shaders/compositing_shaders.bib
+++ b/compositing_shaders/compositing_shaders.bib
@@ -5,7 +5,7 @@
 
 @misc{x3d:spec,
   title = "{Extensible 3D (X3D) Graphics Standard}",
-  author = "{Web 3D Consortium}",
+  author = "{Web3D Consortium}",
   year = "2008",
   howpublished = "ISO/IEC 19775-1.2:2008; see \webLink{http://web3d.org/x3d/specifications/}"
 }
@@ -136,6 +136,6 @@
   url = {http://portal.acm.org/citation.cfm?id=1921479.1921495},
   acmid = {1921495},
   publisher = {Eurographics Association},
-  address = {Aire-la-Ville, Switzerland, Switzerland},
 }
+%  address = {Aire-la-Ville, Switzerland, Switzerland}, (no space for it)
 % see also http://www.cdl.uni-saarland.de/projects/anysl/
