Reference to "A modern declarative surface shader for X3D", but commented out --- no space.
git-svn-id: https://svn.code.sf.net/p/castle-engine/code/trunk/papers@8870 afe8dcc5-9094-451b-8773-5f495042a737

--- a/compositing_shaders/compositing_shaders.bib
+++ b/compositing_shaders/compositing_shaders.bib
@@ -139,3 +139,21 @@
 }
 %  address = {Aire-la-Ville, Switzerland, Switzerland}, (no space for it)
 % see also http://www.cdl.uni-saarland.de/projects/anysl/
+
+@inproceedings{web3d2010:declarativeshader,
+  author = {Schwenk, Karsten and Jung, Yvonne and Behr, Johannes and Fellner, Dieter W.},
+  title = {A modern declarative surface shader for X3D},
+  booktitle = {Proceedings of the 15th International Conference on Web 3D Technology},
+  series = {Web3D '10},
+  year = {2010},
+  isbn = {978-1-4503-0209-8},
+  location = {Los Angeles, California},
+  pages = {7--16},
+  numpages = {10},
+  url = {http://doi.acm.org/10.1145/1836049.1836051},
+  doi = {http://doi.acm.org/10.1145/1836049.1836051},
+  acmid = {1836051},
+  publisher = {ACM},
+  address = {New York, NY, USA},
+  keywords = {X3D, declarative shader, material description},
+}
