--- a/compositing_shaders/compositing_shaders.tex
+++ b/compositing_shaders/compositing_shaders.tex
@@ -289,6 +289,13 @@ shaders with user shaders. We strive to do something more (allow effortless
 integration between various user shaders too), and simpler (without
 introducing any new shading language).
 
+%% \cite{web3d2010:declarativeshader} presents a declarative approach
+%% to an advanced shader in X3D. However, it only allows a fixed set
+%% of functionality, kind od ,,advanced and exhanced material''.
+%% It doesn't expose any shader functionality to the authors.
+%% It merely allows the authors to use some advanced algorithms that in practice
+%% will be usually implemented by shaders inside the application.
+
 At the end, we would like to mention a solution from a completely
 different domain, that is surprisingly similar to ours in some ways.
 Drupal (\URL{http://drupal.org/}),
