Spellcheck: normal-map.
git-svn-id: https://svn.code.sf.net/p/castle-engine/code/trunk/papers@8872 afe8dcc5-9094-451b-8773-5f495042a737

--- a/compositing_shaders/compositing_shaders.tex
+++ b/compositing_shaders/compositing_shaders.tex
@@ -983,7 +983,7 @@ We also want to simulate the fact that water has reflections, and
 is transparent. We have implemented a nice water using this approach,
 with (initially) two independent effect nodes. See figure \ref{fig_water}.
 Then we have tested two alternative
-approaches for normal generation (take from pre-recorded series of normalmaps,
+approaches for normal generation (take from pre-recorded series of normal-maps,
 or calculate from a smooth 3D noise). They both generate normal
 vectors in the tangent space, overriding a plug defined by yet another effect
 that transforms normals into the eye space.
