--- a/compositing_shaders/compositing_shaders.tex
+++ b/compositing_shaders/compositing_shaders.tex
@@ -80,12 +80,12 @@
 \maketitle
 
 \begin{abstract}
-We present a new approach for implementing GPU shader effects.
+We present a new approach for implementing effects using the GPU shading languages.
 Our effects seamlessly cooperate with each other and with
 the shaders used internally by the 3D application.
 Thus the effects are reusable, work in various combinations
 and under all lighting and texture conditions.
-This makes the GPU shaders useful for typical authoring needs.
+%This makes the GPU shaders more usable for 3D content authors.
 We have designed our effects to fit naturally in 3D scene graph formats,
 in particular we present a number of extensions to the X3D standard.
 Our extensions nicely integrate shader effects with X3D
